--- a/client/src/containers/Header.css
+++ b/client/src/containers/Header.css
@@ -30,6 +30,9 @@ box-sizing: border-box;
     position: absolute;
     box-sizing: border-box;
 }
+.set-line{
+    line-height: 18px;
+}
 .navbar-container{
     width: 100%;
     height: 100%;
