--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -3,22 +3,45 @@ body.home-body{
     margin:0px;
     padding:0px;
     width:100%;
+    height: 100vh;
     background: url("../img/bgcontent.png"); 
     background-size:     cover;                   
     background-repeat:   no-repeat;
     background-position: center center; 
+    overflow-y: auto;
 }
 .text-name-project{
     width: 100%;
     text-align: center;
-    font-size: 19px;
+    font-size: 20px;
+    font-weight: bold;
     margin-top: 12px;
+    margin-bottom: 12px;
     position: relative;
 
+}
+.img-project{
+    width: calc(100% - 24px);
+    /* margin-left: 12px; */
 }
 
 .set-color-number{
     width: 100%;
     text-align: left;
     padding-left: 12px;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 6px;
+    
+}
+.detail-box{
+    width: 100%;
+    padding: 12px 24px;
+    position: relative;
+    box-sizing: border-box;
+    
+}
+.set-color-text{
+    font-size: 20px;
+    font-weight: normal;
 }
