--- a/client/src/containers/Nationality.css
+++ b/client/src/containers/Nationality.css
@@ -45,3 +45,25 @@ body.home-body{
     font-size: 20px;
     font-weight: normal;
 }
+.detail-head-text{
+    text-align: left;
+    font-size: 18px;
+    position: relative;
+    box-sizing: border-box;
+    font-weight: bold;
+}
+
+.select-nation{
+    width: 150px;
+    height: 30px;
+    position: relative;
+    box-sizing: border-box;
+    margin-bottom: 12px;
+}
+.map-box{
+    width: 100%;
+    height:calc(100vh - 251px);
+    position: relative;
+    box-sizing: border-box;
+    background-color: red;
+}
