--- a/client/src/containers/NewLabor.css
+++ b/client/src/containers/NewLabor.css
@@ -26,6 +26,13 @@ body.newlabor-body{
     text-align: left;
     height: 40px;
 }
+.floatleft_box2{
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+    text-align: left;
+    height: 240px;
+}
 .register-input-box{
     /* height: 44px; */
 }
@@ -152,11 +159,22 @@ select{
    width: 100%;
     position: relative;
     box-sizing: border-box;
+    margin-bottom: 24px;
+}
+.customers2{
+    border-collapse: collapse;
+    width: 100%;
+     position: relative;
+     box-sizing: border-box;
+     background-color: white;
+     margin-top: 24px;
+     text-align: left;
 }
 
 #customers td, #customers th {
     border: 1px solid #ddd;
     padding: 8px;
+    position: relative;
 }
 
 
@@ -181,14 +199,104 @@ select{
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: none !important;
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
+    border: none;
+    box-sizing: border-box;
+
+}
+.input-school2{
+    /* width: 100%; */
+    height: 40px;
+    position: relative;
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
+  margin-bottom: 24px;
+  padding-left: 12px;
     box-sizing: border-box;
 }
+.input-school3{
+     width: calc(100% - 90px);
+     height: 40px;
+     position: relative;
+     border: none;
+     border-bottom: 1px solid black;
+     background-color: transparent;
+   margin-bottom: 24px;
+   padding-left: 12px;
+     box-sizing: border-box;
+     /* float: left; */
+     margin-left: 40px;
+     font-size: 16px;
+}
 .other-input{
+    /* height: 44px; */
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid black;
+     background-color: transparent;
+    border: none;
+    margin-bottom: 48px;
+}
+.other-school{
+    width: 100%;
+    /* height: 44px; */
+    position: relative;
+    border: none;
+    border-bottom: 1px solid black;
+     background-color: transparent;
+   
+}
+.other-input2{
     height: 44px;
     width: 100%;
     position: relative;
     border-bottom: 1px solid black;
     background-color: red;
-    margin-bottom: 48px;
+    /* margin-bottom: 48px; */
+    z-index: 10;
+}
+.height-container{
+    height: 60px;
+}
+.input-grade{
+    font-size: 20px;
+    text-align: center;
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+}
+.search-box{
+    width: 90%;
+    margin: 0 auto;
+    height: 40px;
+    position: relative;
+    box-sizing: border-box;
+    /* padding-right: 20px; */
+   
+}
+.search-form{
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    border: 1px solid #707070;
+    background-color: white;
+    border-radius: 6px;
+    padding-right: 24px;
+    box-sizing: border-box;
+    padding-left: 12px;
+}
+.img-search{
+    position: absolute;
+    width: 18px;
+    right: 6px;
+    top: 12px;
+}
+.img-profile{
+    width: 18px;
+    position: absolute;
+    right: 6px;
+    top: 8px;
 }
