--- a/client/src/containers/Header.css
+++ b/client/src/containers/Header.css
@@ -70,7 +70,16 @@ box-sizing: border-box;
     box-sizing: border-box;
     line-height: 16px;
 }
-
+.text-each-navbar2{
+color: #A1C8EC;
+width: 100%;
+height: 50%;
+font-size: 18px;
+text-align: center;
+position: relative;
+box-sizing: border-box;
+line-height: 16px;
+}
 .right-content-box{
     position: absolute;
     right: 6px;
