--- a/client/src/containers/Header.css
+++ b/client/src/containers/Header.css
@@ -1,7 +1,9 @@
+
 .header-main-box{
     width: 100%;
     height: 160px;
-    position: relative;
+    position: fixed;
+    top: 0;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -9,6 +11,7 @@
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
     background-position: center center; 
+    z-index: 10;
 }
 .header-logo{
     width: 20%;
@@ -105,7 +108,16 @@ line-height: 16px;
     
    /* padding-top: 4px; */
 }
+.register-supplier{
+    position: absolute;
+    left: 6px;
+    top: 6px;
+    color: white;
+}
 
+.set-width-only{
+    width: 50%;
+}
  /* web */
  @media (min-width: 1024px){
     .navbar-container{
