--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -4,6 +4,7 @@ body.home-body{
     padding:0px;
     width:100%;
     height: 100%;
+    padding-top: 160px;
     background: url("../img/bgcontent.png"); 
     background-size:     cover;                   
     background-repeat:   no-repeat;
