--- a/client/src/containers/NewLabor.css
+++ b/client/src/containers/NewLabor.css
@@ -1,6 +1,6 @@
 body.newlabor-body{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: relative;
     padding: 0px;
     margin: 0px;
