title and some css changed

--- a/client/src/containers/ScanQrCode.css
+++ b/client/src/containers/ScanQrCode.css
@@ -21,3 +21,9 @@ body.Scan-body{
     box-sizing: border-box;
     background-color: red;
 }
+.result-qrcode{
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+    overflow: hidden;
+}
